# Sicry

./: .env.example  CHANGELOG.md  pyproject.toml  sicry.py  tests.py
.github/: dependabot.yml
.github/workflows/: ci.yml
